--- a/package.json
+++ b/package.json
@@ -62,7 +62,10 @@
     "twit": "^2.1.0",
     "uglify-js": "^2.4.24",
     "validator": "^4.0.5",
-    "yui": "^3.18.1"
+    "yui": "^3.18.1",
+    "socket.io": "~1.3.6",
+    "http": "0.0.0",
+    "passport.socketio": "~3.6.1"
   },
   "devDependencies": {
     "blessed": "^0.1.81",
