--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "yui": "^3.18.1",
     "socket.io": "~1.3.6",
     "http": "0.0.0",
-    "passport.socketio": "~3.6.1"
+    "passport.socketio": "~3.6.1",
+    "aws-sdk": "~2.2.19",
+    "multer": "~1.1.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
