--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clockwork": "^0.1.4",
     "compression": "^1.6.2",
     "connect-mongo": "^1.1.0",
+    "cookie-parser": "^1.3.5",
     "dotenv": "^2.0.0",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
