--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jade": "^1.11.0",
     "lodash": "^4.12.0",
     "lusca": "^1.4.1",
+    "moment": "^2.14.1",
     "mongoose": "^4.4.17",
     "morgan": "^1.7.0",
     "multer": "~1.1.0",
