--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "async": "^2.0.0-rc.4",
+    "aws-sdk": "~2.2.19",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.1",
     "cheerio": "^0.20.0",
@@ -24,13 +25,14 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.13.0",
     "express-validator": "^2.20.6",
+    "http": "0.0.0",
     "instagram-node": "^0.5.8",
     "jade": "^1.11.0",
     "lodash": "^4.12.0",
     "lusca": "^1.4.1",
     "mongoose": "^4.4.17",
     "morgan": "^1.7.0",
-    "multer": "^1.1.0",
+    "multer": "~1.1.0",
     "node-foursquare": "^0.3.0",
     "node-linkedin": "^0.5.3",
     "node-sass-middleware": "^0.9.8",
@@ -42,16 +44,13 @@
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "passport.socketio": "~3.6.1",
     "request": "^2.72.0",
     "serve-favicon": "^2.3.0",
+    "socket.io": "~1.3.6",
     "stripe": "^4.6.0",
     "uglify-js": "^2.4.24",
-    "validator": "^5.2.0",
-    "socket.io": "~1.3.6",
-    "http": "0.0.0",
-    "passport.socketio": "~3.6.1",
-    "aws-sdk": "~2.2.19",
-    "multer": "~1.1.0"
+    "validator": "^5.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
