Make skills a mongo model and add migration to add them

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.12.0",
     "lusca": "^1.4.1",
     "moment": "^2.14.1",
+    "mongodb-migrate": "^2.0.1",
     "mongoose": "^4.4.17",
     "morgan": "^1.7.0",
     "multer": "~1.1.0",
