--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,6 @@ Thumbs.db
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
+.ebextensions/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
