Don't deploy ebextensions on dev
Since this will add the https certificate for shareonbazaar.eu, which
only works on the www subdomain, and not on the dev subdomain.

--- a/.ebignore
+++ b/.ebignore
@@ -22,5 +22,6 @@ Thumbs.db
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
+.ebextensions/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
